# familia

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README.ru.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deploy.sh  docker-compose.cli.yml  docker-compose.exec-sandbox.yml  docker-compose.local.yml  docker-compose.memx.local.yml  docker-compose.memx.yml  docker-compose.yml  principals.example.json  run_tests.sh
.githooks/: _scan.py  (+4 more)
familia/: README.md  policy.example.yaml  pyproject.toml
familia/src/familia/: __init__.py  audit.py  bootstrap.py  memx_client.py  pending_asks.py  principals.py  roles.py  tz.py
familia/src/familia/acl/: __init__.py  codec.py  graph_io.py  peers.py  principal_memory.py  reachable.py  schema.py  vocabulary.py
familia/src/familia/bus/: callback_dispatcher.py
familia/src/familia/cli/: audit_view.py  graph_admin.py
familia/tests/: test_acl_codec.py  test_acl_peers.py  test_acl_reachable.py  test_acl_schema.py  test_acl_vocabulary.py  test_admin_roles.py  test_audit_chmod.py  test_cli_audit_tags.py  test_cli_graph_admin.py  test_cli_json_mode.py  test_dream_per_scope.py  test_family_graph.py  test_gate_and_send_paths.py  test_heartbeat_target.py  test_memory_scope.py  test_memory_tags.py  test_peer_private_acl.py  test_pending_store.py  test_policy_at_actor.py  test_policy_rules.py  test_policy_structural_keys.py  test_resolve_person_two_graphs.py  test_scenarios_e2e.py  test_security_hardening.py  test_seed_default_topics.py  test_tz.py  test_vocabulary_in_prompt.py
memx/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  auth.py  docker-compose.yml  main.py  pubsub.py  pyproject.toml  redis_client.py  requirements.txt  schema.py  store.py  validate_api.py
memx/config/: acl.json
memx/examples/: test.py
memx/examples/plan-coordniate/: .env.example  README.md  agent_critic.py  agent_researcher.py  agent_synthesizer.py  common.py  monitor.py
memx/frontend/: streamlit.py
memx/frontend/memx-frontend/: jsconfig.json  package-lock.json  package.json
memx/scripts/: smoke_test.py
memx/sdk/memx_sdk/: client.py
(+106 files in other folders)
