[project]
name = "memx"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehul Gaidhani",email = "mehulgaidhani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "jsonschema (>=4.24.0,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "supabase (>=2.15.3,<3.0.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "hatchling (>=1.27.0,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
package-mode = false
